// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/QuickLinks - Components should match the snapshot - GridContainer 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__GridContainer-sc-1jbgekn-0 eQdFAO"
  />
</DocumentFragment>
`;

exports[`Components/QuickLinks - Components should match the snapshot - QuickLinksWrapper 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__QuickLinksWrapper-sc-1jbgekn-1 plpKI"
  />
</DocumentFragment>
`;
